# youtube-downloader

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  PUBLISH.md  README.md  build_app.sh  launch.sh  main.py  pyproject.toml  watch_and_rebuild.sh
.github/workflows/: release.yml
src/: config.py  downloader.py  history.py  utils.py
src/ui/: app.py  components.py  download_tab.py  history_tab.py
