[project]
name = "youtube-downloader"
version = "0.1.0"
description = "A clean, modular YouTube video and audio downloader with a modern GUI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "customtkinter>=6.0.0",
    "pillow>=12.3.0",
    "requests>=2.34.2",
    "yt-dlp>=2026.7.4",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
]
